2014-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/products.R: matrix products overhauled; should work with sparseVectors;
	speedup of crossprod(v, <sparseM>), thanks to nudge by Niels Richard Hansen.
	* man/matrix-products.Rd: all matrix products documented in one file.
	* tests/matprod.R: more extensive testing

2014-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-2

	* NAMESPACE: export fast power-user coercion utilities
	.dsy2mat(), .dxC2mat(), .T2Cmat(), ..2dge().

2013-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R (image): (xlim, ylim) get a slightly changed
	default, plus  ylim := sort(ylim, "decreasing").
	This is strictly not back-compatible but should never harm.

2013-09-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (fac2sparse, fac2Sparse): newly exported; plus
	'giveCsparse' option.

2013-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/scripts/0get-SuiteSparse.sh: new download script, for
	* src/CHOLMOD/*, src/AMD/*, ...: getting SuiteSparse version 4.2.1

	* R/zzz.R (.SuiteSparse_version): new function

2013-09-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R (solve.dsC.*): finally fix the long-lasting
	undetected solve(<dsC>) bug (only in case Cholmod fails) [r2908].

	* DESCRIPTION (Version): 1.0-15, CRAN-released 2013-09-26

2013-09-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-14, CRAN-released 2013-09-12
	* R/dgCMatrix.R: "stop gap fix" for R 3.0.2: partly revert
	solve(<sparse>,*) changes in 1.0-13.

2013-08-27 Fabian Scheipl  <fabian.scheipl@stat.uni-muenchen.de>

	* man/indMatrix-class.Rd: new "indMatrix" class, a natural
	superclass of "pMatrix".  Many methods moved from "pMatrix" to
	"indMatrix".

2013-05-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-13, CRAN-released 2013-09-10

	* R/KhatriRao.R: Efficient KhatriRao() by Michael Cysouw
